Fixed issue with flippable tiles not rendering correctly on safari

--- a/styles/global.css
+++ b/styles/global.css
@@ -225,13 +225,6 @@ input[type=number] {
   animation: none;
 }
 
-.tile.correct .inner,
-.tile.incorrect .inner,
-.tile.incorrect-position .inner {
-  transform: rotateX(0deg);
-  -webkit-transform: rotateX(0deg);
-}
-
 .flippable .tile.correct .inner,
 .flippable .tile.incorrect .inner,
 .flippable .tile.incorrect-position .inner {
@@ -239,14 +232,13 @@ input[type=number] {
   -webkit-transform: rotateX(180deg);
 }
 
-.flippable .tile .inner {
-  width: 100%;
-  height: 100%;
+.tile .inner {
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
   transition: all .2s linear;
   -webkit-transition: all .2s linear;
-  transition-delay: 0s;
+  width: 100%;
+  height: 100%;
 }
 
 .flippable .tile.sequence1 .inner {
@@ -418,28 +410,23 @@ input[type=number] {
 }
 
 #summary.flippable .tile .inner {
-  transition-delay: .1s !important;
-}
-
-.tile .inner {
-  transform-style: preserve-3d;
-  width: 100%;
-  height: 100%;
+  transition-delay: .1s !important; 
 }
 
 .tile .face {
   position: absolute;
   width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
+  height: 100%; 
   text-align: center;
   text-transform: uppercase;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
-.tile .face.back {
+.flippable .tile .face.back {
   display: block;
   border: solid 2px #cccccc;
+  transform: rotateX(180deg);
 }
 
 .tile .face.front {
